@@ -65,3 +65,10 @@ tasks.named('bootBuildImage') {
     environment["BPE_DELIM_JAVA_TOOL_OPTIONS"] = " "
     environment["BPE_APPEND_JAVA_TOOL_OPTIONS"] = "--enable-preview"
 }
+
+tasks.named("bootRun") {
+    jvmArgs = [
+        "--enable-preview",
+        "--enable-native-access=ALL-UNNAMED"
+    ]
+}
